# threshcorder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  flake.nix  meson.build
src/: audio.h  main.cpp  wav_file.cpp  wav_file.h
threshcorder/: audio.h  main.cpp  util.h  wav_file.cpp  wav_file.h
